[metadata]
name = <RPIStepperServer>
version = <version number: 0.0.0>
license = <None>
description = <A Raspberry Pi package to run a stepper motor parallel to a python process>
long_description = file: README.rst
author = <Nick Thorpe>
classifiers=
   <Operating System :: POSIX>
   <Programming Language :: C++>
   <Framework :: IPython>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src